--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
              <div class="icon-container">
                 <!--icon-->
                 <div class="icon">
-                    <a href="https://in.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank">
+                    <a href="https://github.com/sandra7968/portfolio" target="_blank">
                         <i class="fa-brands fa-linkedin fa-xl"></i>
                     </a>
                 </div>
